exercises/30-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
    spec:
      containers:
      - image: bmuschko/nodejs-hello-world:1.0.0
        name: nodejs-hello-world
        ports:
        - containerPort: 3000
        resources: {}
status: {}
