exercises/30-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress
spec:
  rules:
  - host: hello-world.exposed
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
